# diplomna-mag

./: .gitignore  Dockerfile  README.md  ~$пломно задание.docx  Дипломно задание.docx  Система за създаване и обработка на поръчки в ресторант.docx
RestaurantApp/: build.gradle.kts
RestaurantApp/app/: build.gradle.kts
RestaurantApp/app/src/main/: AndroidManifest.xml
RestaurantApp/app/src/main/openapi/: schema.yaml
RestaurantApp/app/src/main/res/xml/: network_security_config.xml
RestaurantApp/com/example/restaurantapp/api_client/: README.md
RestaurantApp/gradle/: libs.versions.toml
RestaurantApp/gradle/wrapper/: gradle-wrapper.properties
codegen/: generate_from_api.bat
codegen/generated_client/.openapi-generator/: FILES
codegen/generated_client/docs/: ApiApi.md  SchemaApi.md
diagrams/: beacons.drawio  model_diag.md  overview.drawio  screenStructure.drawio
django/: db.sqlite3  manage.py  pyproject.toml
django/backend/: admin.py  models.py  serializers.py  signals.py  urls.py  views.md  views.py
django/backend/migrations/: 0001_initial.py  0002_alter_menuitem_category.py  0002_remove_order_customer_email_and_more.py  0003_alter_menuitem_category.py  0003_order_delivery_address_order_status_and_more.py  0004_alter_order_status.py
django/frontend/: urls.py  views.py
django/frontend/templates/frontend/: orders_list.html
django/frontend/templates/registration/: login.html
django/restaurant_backend/: asgi.py  settings.py  urls.py  wsgi.py
esp-ble/ble/: ble.ino
vid/video.tscproj/: video.tscproj
(+68 files in other folders)
